make upload binary rather than zip

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,7 +15,9 @@ archives:
       windows: Windows
       386: i386
       amd64: x86_64
-      files: 
+  format: binary
+  files: 
+
 checksum:
   name_template: 'checksums.txt'
 snapshot:
