--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -15,8 +15,8 @@ archives:
       windows: Windows
       386: i386
       amd64: x86_64
-  format: binary
-  files: 
+  - format: binary
+  - files: 
 
 checksum:
   name_template: 'checksums.txt'
