--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -9,14 +9,13 @@ builds:
       - windows
       - darwin
 archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
+        #  - replacements:
+        #      darwin: Darwin
+        #      linux: Linux
+        #      windows: Windows
+        #      386: i386
+        #      amd64: x86_64
   - format: binary
-  - files: 
 
 checksum:
   name_template: 'checksums.txt'
