--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -22,9 +22,9 @@ checksum:
 snapshot:
   name_template: "{{ .Tag }}-next"
   release:
-    github:
-        owner: kqzz
-        name: namemc-art
+          #     github:
+          #         owner: kqzz
+          #         name: namemc-art
 changelog:
   sort: asc
   filters:
